feat: 당첨 번호와 보너스 번호를 가지는 WinningNumbers 도메인 클래스 구현 및 Lotto 클래스 확장
- Lotto를 활용해 당첨 번호 불변성(개수 6개, 1~45 범위, 중복 불가) 선행 검증
- 보너스 번호 범위(1~45) 및 당첨 번호와의 중복 검증
- 구매한 로또와의 일치 개수 조회
- 구매한 로또가 보너스 번호를 포함하는지 여부 확인
- [Lotto 확장] 생성자에서 null 방어
- [Lotto 확장] 번호 포함 여부 조회
- [Lotto 확장] 비교 대상 로또가 null일 때 예외 발생하도록 방어
- 로또 번호 목록을 불변 리스트로 노출하도록 변경해 캡슐화 강화
- WinningNumbersTest, LottoTest에 경계값/중복/null 검증 및 기능 단위 테스트 추가
- README.md 예외 처리 표에 Lotto/WinningNumbers 관련 예외 메시지 추가