@@ -1,8 +1,10 @@
 package lotto.domain;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class Lotto {
 
@@ -12,14 +14,39 @@ public class Lotto {
     private final List<Integer> numbers;
 
     public Lotto(List<Integer> numbers) {
+        validateNotNull(numbers);
         validateCount(numbers);
         validateRange(numbers);
         validateDuplicate(numbers);
-        this.numbers = sort(numbers);
+        this.numbers = sortNumbers(numbers);
     }
 
     public List<Integer> getNumbers() {
-        return numbers;
+        return Collections.unmodifiableList(numbers);
+    }
+
+    public boolean containsNumber(int number) {
+        return numbers.contains(number);
+    }
+
+    public int countMatchingNumbers(Lotto otherLotto) {
+        validateOtherLottoNotNull(otherLotto);
+        Set<Integer> otherNumbers = new HashSet<>(otherLotto.numbers);
+        return (int) numbers.stream()
+                .filter(otherNumbers::contains)
+                .count();
+    }
+
+    private void validateOtherLottoNotNull(Lotto otherLotto) {
+        if (otherLotto == null) {
+            throw new IllegalArgumentException("[ERROR] 비교할 로또가 null일 수 없습니다.");
+        }
+    }
+
+    private void validateNotNull(List<Integer> numbers) {
+        if (numbers == null) {
+            throw new IllegalArgumentException("[ERROR] 로또 번호는 null일 수 없습니다.");
+        }
     }
 
     private void validateCount(List<Integer> numbers) {
@@ -37,15 +64,15 @@ public class Lotto {
     }
 
     private void validateDuplicate(List<Integer> numbers) {
-        Set<Integer> unique = new HashSet<>(numbers);
-        if (unique.size() != numbers.size()) {
+        Set<Integer> uniqueNumbers = new HashSet<>(numbers);
+        if (uniqueNumbers.size() != LOTTO_SIZE) {
             throw new IllegalArgumentException("[ERROR] 로또 번호는 중복될 수 없습니다.");
         }
     }
 
-    private List<Integer> sort(List<Integer> numbers) {
+    private List<Integer> sortNumbers(List<Integer> numbers) {
         return numbers.stream()
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
 }
